feat: Initial project setup and documentation
This commit establishes the foundational structure and documentation for the AegisNav project.

- Scaffolds the complete project directory structure for agents, machine learning, simulation, and UI components.
- Establishes a Python virtual environment (venv) and installs all necessary dependencies from requirements.txt.
- Adds a comprehensive README.md detailing the project vision, system architecture, tech stack, and a multi-phase roadmap.
- Includes an MIT License to define usage rights and ensure professional project standards.
- Configures .gitignore to exclude the virtual environment, GMAT source code, and other standard temporary files.
- Creates benchmarks/ and validation/ directories for baseline metrics and real mission comparison data.

--- a/.gitignore
+++ b/.gitignore
@@ -135,13 +135,17 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-.env
-.envrc
-.venv
-env/
 venv/
-ENV/
-env.bak/
+.venv/
+env/
+.env
+
+# GMAT Source Code (external dependency)
+gmat-git/
+
+# IDE / Editor
+.vscode/
+.idea/k/
 venv.bak/
 
 # Spyder project settings
