feat: Enhanced project structure and documentation for GMAT integration
- Updated .gitignore to exclude gmat-git/ repository (reference material)
- Enhanced README with comprehensive benchmarking methodology
- Added baseline comparison framework (Hohmann, GMAT-optimized, MSL reference)
- Defined quantitative performance metrics for agentic system validation
- Established success criteria for demonstrating AI improvements over traditional methods
- Ready to begin Phase 1: GMAT baseline trajectory simulation

--- a/.gitignore
+++ b/.gitignore
@@ -134,23 +134,26 @@ celerybeat.pid
 # SageMath parsed files
 *.sage.py
 
-# Environments
+# Virtual Environment
 venv/
 .venv/
 env/
 .env
 
-# GMAT Source Code (external dependency)
+# External Repositories (Reference Material)
 gmat-git/
 
 # IDE / Editor
 .vscode/
-.idea/k/
-venv.bak/
+.idea/
 
 # Spyder project settings
 .spyderproject
 .spyproject
+
+# Environments
+ENV/
+env.bak/
 
 # Rope project settings
 .ropeproject
